[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/plaguedoctor.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Enviroment/Crop.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Player/MeeleWeapon.tscn" type="PackedScene" id=6]
[ext_resource path="res://gradslol.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.5, 7 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 50.0

[sub_resource type="CircleShape2D" id=6]
radius = 14.0357

[sub_resource type="Environment" id=7]
glow_enabled = true

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )
crop = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )
vframes = 4
region_rect = Rect2( -38, 57, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Walk = SubResource( 2 )

[node name="Attract" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attract"]
shape = SubResource( 5 )

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
shape = SubResource( 6 )

[node name="Hotbar" type="Node2D" parent="."]

[node name="Hand" type="Node2D" parent="Hotbar"]

[node name="Action" type="Position2D" parent="Hotbar/Hand"]
position = Vector2( 13, 0 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="Polygon2D" type="Polygon2D" parent="Hotbar/Hand/Action"]
polygon = PoolVector2Array( -2, -1, -1, 2, 1, 2, 2, 0, 1, -2, -1, -2 )

[node name="MeeleWeapon" parent="Hotbar/Hand" instance=ExtResource( 6 )]

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 7 )
energy = 0.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )

[connection signal="body_entered" from="Attract" to="." method="_on_Attract_body_entered"]
[connection signal="body_exited" from="Attract" to="." method="_on_Attract_body_exited"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_Attack_body_exited"]
